2012-06-25  Kwang Yul Seo  <skyul@company100.net>

        Remove unused constant timeWithoutMouseMovementBeforeHidingControls
        https://bugs.webkit.org/show_bug.cgi?id=89823

        Reviewed by Daniel Bates.

        After r87692, timeWithoutMouseMovementBeforeHidingControls is not used anymore.

        * html/HTMLMediaElement.cpp:
        (WebCore):

2012-06-25  Zeev Lieber  <zlieber@chromium.org>

        [Chromium] RenderPass textures are evicted at the end of every frame
        https://bugs.webkit.org/show_bug.cgi?id=89786

        Reviewed by Adrienne Walker.

        Removed calls to TextureManager::reduceMemoryToLimit inside
        finishDrawingFrame() method.

        Added unit tests to verify new behavior.

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::finishDrawingFrame):

2012-06-25  Allan Xavier  <allan.xavier@undefinedltd.co.uk>

        [GTK] Add graphviz debug output for the gstreamer video pipeline.
        https://bugs.webkit.org/show_bug.cgi?id=89660

        Reviewed by Martin Robinson.

        Dump the current video pipeline as a graphviz DOT file when the
        pipeline state changes or when an error occours.

        No new tests as the change is only useful for debugging.

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivateGStreamer::handleMessage):

2012-06-25  Adam Barth  <abarth@webkit.org>

        ASSERT(m_wheelEventHandlerCount > 0) can fire
        https://bugs.webkit.org/show_bug.cgi?id=89856

        Reviewed by Eric Seidel.

        When a node with a wheel or a touch event is moved from one document to
        another, the didAddMumble/didRemoveMumble calls do not balance because
        they're called on different documents. This patch twiddles the counts
        appropriately in that case.

        Test: fast/events/move-element-with-wheel-and-touch-event-listeners.html

        * dom/EventNames.h: