@@ -1,5 +1,16 @@
 2012-06-25  Kwang Yul Seo  <skyul@company100.net>
 
+        Remove unused static function shadowFor
+        https://bugs.webkit.org/show_bug.cgi?id=89824
+
+        Reviewed by Daniel Bates.
+
+        shadowFor is not used anymore after r117796. No behaviour changes.
+
+        * dom/TreeScopeAdopter.cpp:
+
+2012-06-25  Kwang Yul Seo  <skyul@company100.net>
+
         Remove unused constant timeWithoutMouseMovementBeforeHidingControls
         https://bugs.webkit.org/show_bug.cgi?id=89823
 
